--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Wet+Paint&family=Sora:wght@100..800&display=swap');
+
 * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: "Open Sans", serif;
 }
 
 html,
@@ -10,8 +13,167 @@ body {
             height: 100%;
 }
 
+a {
+            text-decoration: none;
+}
+
 
 .container {
             width: 100%;
             min-height: 100vh;
+}
+
+.topDiv {
+            align-content: center;
+            width: 100%;
+            height: 7.3vh;
+            background: linear-gradient(to right, #1C6FFA, #7545F3);
+            color: white;
+}
+
+.topDiv>p {
+            font-size: 13px;
+            text-align: center;
+            font-weight: bolder;
+            word-spacing: 1px;
+            cursor: pointer;
+}
+
+.topSticky {
+            position: sticky;
+            top: 0;
+}
+
+nav {
+            width: 100%;
+            height: 12.6vh;
+            background-color: #FFFFFF;
+            box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.049);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 50px;
+}
+
+nav img {
+            width: 114px;
+}
+
+.rightSide {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 33px;
+}
+
+.rightSide>div {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            /* gap: 12px; */
+}
+
+
+.rightSide>div>a {
+            font-size: 14px;
+            padding: 13px 16px;
+            font-weight: 700;
+            color: rgba(71, 68, 68, 0.909);
+            letter-spacing: 0.1px;
+}
+
+.rightSide>div>a:hover {
+            color: #1C6FFA;
+}
+
+.rightSide>button {
+            padding: 0 32px;
+            height: 40px;
+            font-weight: 700;
+            background-color: #0468D7;
+            color: white;
+            border: none;
+            outline: none;
+            border-radius: 20px;
+}
+
+.content {
+            width: 100%;
+            min-height: 100vh;
+}
+
+.content1 {
+            background: linear-gradient(35deg, #fcdde8, #f3fcff 60%);
+}
+
+.content1>div {
+            display: flex;
+}
+
+.leftContent,
+.rightContent {
+            width: 50%;
+            height: 100vh;
+}
+
+.leftContent {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+}
+
+.leftContent>h1 {
+            font-size: 70px;
+            line-height: 80px;
+            width: 57%;
+}
+
+.rightContent {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+}
+
+.rightContent>img {
+            height: 500px;
+}
+
+.content1>h2 {
+            font-weight: 400;
+            text-align: center;
+            font-size: 36px;
+            max-width: 978px;
+            line-height: 1.2;
+            padding: 0 0 117px 0;
+            margin: 0 auto;
+}
+
+
+/* content2 starts from here */
+
+.content2 {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            padding-top: 40px;
+}
+
+.box {
+            width: 400px;
+            border-top: 4px solid #48484846;
+            padding-top: 40px;
+}
+
+.box>h3 {
+            font-size: 28px;
+            margin-bottom: 24px;
+}
+
+.box>p {
+            font-size: 20px;
+            margin-bottom: 70px;
+}
+
+.box>img {
+            width: 200px;
 }
