--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html,
 body {
             width: 100%;
             height: 100%;
+            scroll-behavior: smooth;
 }
 
 a {
@@ -21,6 +22,10 @@ a {
 .container {
             width: 100%;
             min-height: 100vh;
+}
+
+nav>i {
+            display: none;
 }
 
 .topDiv {
@@ -80,6 +85,10 @@ nav img {
             font-weight: 700;
             color: rgba(71, 68, 68, 0.909);
             letter-spacing: 0.1px;
+}
+
+.topDiv {
+            padding: 0 10px 0 10px;
 }
 
 .rightSide>div>a:hover {
@@ -156,6 +165,7 @@ nav img {
             justify-content: center;
             gap: 20px;
             padding-top: 40px;
+            height: 87vh;
 }
 
 .box {
@@ -176,4 +186,66 @@ nav img {
 
 .box>img {
             width: 200px;
+}
+
+
+.content3 {
+            align-content: center;
+}
+
+.content3Inside {
+            width: 80%;
+            height: 80vh;
+            margin: 0 auto;
+            display: flex;
+}
+
+
+.content3LeftSide,
+.content3RightSide {
+            width: 50%;
+            height: inherit;
+}
+
+.hgroup>h4 {
+            font-size: 20px;
+}
+
+.hgroup>h3 {
+            font-size: 60px;
+}
+
+.content3LeftSide>p {
+            font-size: 20px;
+            margin: 32px 0;
+            width: 80%;
+}
+
+.btnss {
+            display: flex;
+            gap: 15px;
+}
+
+.btnss>button:nth-child(1) {
+            padding: 10px 32px;
+            border-radius: 20px;
+            color: #0468D7;
+            font-size: 14px;
+            border: 1px solid #1C6FFA;
+            background-color: transparent;
+}
+
+.btnss>button:nth-child(2) {
+            background-color: transparent;
+            border: none;
+}
+
+.content3RightSide{
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+}
+
+.content3RightSide>img {
+            width: 400px;
 }
