--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ nav img {
 /* content2 starts from here */
 
 .content2 {
+
             display: flex;
             justify-content: center;
             gap: 20px;
@@ -193,7 +194,8 @@ nav img {
             display: flex;
             justify-content: center;
             align-items: center;
-            /* display: none;        */
+            min-height: 80vh;
+            /* display: none; */
 }
 
 .content3Inside {
@@ -251,4 +253,233 @@ nav img {
 
 .content3RightSide>img {
             width: 400px;
+}
+
+/* content4 */
+
+.content4 {
+            width: 100%;
+            min-height: 70vh;
+            padding: 20px 30px;
+            background: linear-gradient(35deg, #fcdde8, #f3fcff 60%);
+            /* display: none; */
+}
+
+.content4>div {
+            display: flex;
+}
+
+.content4Left,
+.content4Right {
+            width: 50%;
+}
+
+
+.content4Right>h4 {
+            font-size: 20px;
+}
+
+.content4Right>h3 {
+            font-size: 60px;
+            line-height: 10vh;
+            margin-top: 20px;
+}
+
+.content4Right>p {
+            font-size: 18px;
+            width: 100%;
+            margin: 20px 0;
+}
+
+.content4Right>button {
+            padding: 10px 32px;
+            background-color: #0468D7;
+            border-radius: 20px;
+            border: none;
+            color: white;
+            font-weight: 600;
+}
+
+.content4Left {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+}
+
+.content4Left>img {
+            height: 400px;
+}
+
+.content5 {
+            width: 100%;
+            min-height: 90vh;
+            padding: 0 100px;
+            align-content: center;
+}
+
+.content5>div {
+            display: flex;
+            flex-direction: row-reverse;
+}
+
+.content4Right {
+            padding: 0 60px
+}
+
+
+.content6 {
+            background: linear-gradient(35deg, #fcdde8, #f3fcff 60%);
+            padding: 30px 0;
+            /* display: none; */
+}
+
+.content6>div {
+            display: flex;
+            flex-direction: row-reverse;
+            padding: 10px 68px;
+}
+
+
+.content7 {
+            width: 100%;
+            min-height: 70vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+}
+
+
+.content7Content {
+            width: 80%;
+            height: 70%;
+            border-radius: 30px;
+            overflow: hidden;
+            display: flex;
+            background-color: #042449;
+}
+
+.content7Left {
+            width: 70%;
+            /* background-color: #042449; */
+            height: 100%;
+            padding: 70px;
+            color: white;
+}
+
+.content7Right {
+            width: 30%;
+            height: 100%;
+}
+
+
+.content7Left>h3 {
+            font-size: 60px;
+}
+
+.content7Left>p {
+            font-size: 20px;
+            margin: 10px 0;
+}
+
+
+
+.content7Left>div>button {
+            margin-right: 20px;
+            padding: 10px 30px;
+            border: none;
+            outline: none;
+            border-radius: 20px;
+            font-weight: 600;
+            background-color: white;
+}
+
+.content7Left>div>a {
+            color: white;
+            font-weight: 600;
+}
+
+.content7Right>img {
+            width: 100%;
+            height: 100%;
+}
+
+/* content8  */
+.content8 {
+            width: 100%;
+            min-height: 70vh;
+            padding: 10px 50px;
+            background-color: #F8F9FA;
+}
+
+.content8>.cont {
+            display: flex;
+            border-bottom: 1px solid gray;
+}
+
+
+.content8Left {
+            width: 116%;
+            height: 16vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+}
+
+.content8Left>div>i {
+            font-size: 22px;
+            margin-right: 10px;
+            color: gray;
+}
+
+.content8Right {
+            width: 60%;
+            height: 55vh;
+}
+
+.content8Left>Img {
+            width: 114px;
+}
+
+.content8Right {
+            display: flex;
+            justify-content: space-evenly;
+}
+
+.content8Right>div {
+            height: fit-content;
+}
+
+.content8Right>div>li {
+            margin-bottom: 20px;
+            color: black;
+            font-weight: 600;
+            list-style: none;
+}
+
+
+.content8Right>div>div {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 20px;
+}
+
+.content8Right>div>div>a {
+            color: gray;
+}
+
+.cont2 {
+            display: flex;
+            justify-content: space-between;
+            padding: 20px 0;
+}
+
+.cont2>p {
+            width: 80%;
+}
+
+.cont2>div>a {
+            color: gray;
+            margin-right: 8px;
 }
