--- a/style.css
+++ b/style.css
@@ -420,10 +420,10 @@ nav img {
 
 .content8Left {
             width: 116%;
-            height: 16vh;
+            height: 53vh;
             display: flex;
             flex-direction: column;
-            align-items: center;
+            justify-content: space-between;
 }
 
 .content8Left>div>i {
