--- a/style.css
+++ b/style.css
@@ -45,10 +45,8 @@ nav>i {
 }
 
 .topSticky {
-            position: fixed;
+            position: sticky;
             top: 0%;
-            left: 0;
-            right: 0;
 }
 
 nav {
